# metanoia-agentic-qa

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.yml  metanoia  pyproject.toml  requirements.txt  setup.sh
.atl/: skill-registry.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  CREATING_SKILLS.md  METANOIA-QA.md
examples/: Metanoia-QA-API.postman_collection.json
examples/e-commerce-demo/: README.md  docker-compose.yml  metanoia.yaml
extensions/: README.md
extensions/cursor/: README.md  metanoia-mcp.md
extensions/vscode/: README.md  package.json  tsconfig.json
openspec/: config.yaml
scripts/: rollback-v1.sh
skills/: base.py
skills/SKILL_TEMPLATE/: README.md  SKILL.md  executor.py  schema.json
skills/a11y-tester/: README.md  SKILL.md  executor.py  schema.json
skills/appium-executor/: README.md  SKILL.md  executor.py  schema.json
skills/backstopjs-executor/: README.md  SKILL.md  executor.py  schema.json
skills/behave-executor/: README.md  SKILL.md  executor.py  schema.json
skills/cypress-executor/: README.md  SKILL.md  executor.py  schema.json
skills/datadog-reporter/: README.md  SKILL.md  executor.py  schema.json
skills/graphql-tester/: README.md  SKILL.md  executor.py  schema.json
skills/jmeter-executor/: README.md  SKILL.md  executor.py  schema.json
skills/k6-executor/: README.md  SKILL.md  executor.py  schema.json
skills/locust-executor/: README.md  SKILL.md  executor.py  schema.json
skills/pact-executor/: README.md  SKILL.md  executor.py  schema.json
skills/playwright-executor/: README.md  SKILL.md  executor.py  schema.json
skills/postman-executor/: README.md  SKILL.md  executor.py  schema.json
skills/selenium-executor/: README.md  SKILL.md  executor.py  pom.py  schema.json
skills/visual-healing/: README.md  SKILL.md  executor.py  schema.json
skills/wiremock-executor/: README.md  SKILL.md  executor.py  schema.json
src/: __init__.py
src/agents/: __init__.py  base.py  chaos_agent.py  chaos_engineer.py  compliance.py  context_analyst.py  design_lead.py  performance.py  release_analyst.py  security.py  self_learning.py  strategy_manager.py  types.py  ui_automation.py
src/api/: __init__.py  main.py
src/chaos/: __init__.py  abort_controller.py  experiments.py
src/ci/: __init__.py  orchestrator.py  quality_gate.py  quality_webhook.py
src/compliance/: __init__.py  evidence.py  generator.py
src/config/: secrets.py
src/github/: __init__.py  integration.py
src/gitlab/: __init__.py  integration.py
src/infrastructure/: __init__.py  cost_controller.py  lab_lifecycle_manager.py
src/knowledge/: __init__.py  client.py  rag.py
src/llm/: __init__.py  base.py  deepseek.py  glm.py  kimi.py  llamacpp.py  minimax.py  ollama.py  openai.py  registry.py  vllm.py
src/mcp_server/: __init__.py  handlers.py  models.py  server.py
src/metanoia_qa/: __init__.py  (+1 more)
tests/: conftest.py
(+136 files in other folders)
