[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metanoia-qa"
version = "2.1.0"
description = "Autonomous Agentic STLC Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Josue Calderon", email = "calderonjosue@gmail.com"}
]
keywords = ["qa", "testing", "automation", "langgraph", "agents", "stlc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "fastapi>=0.109.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
k6 = ["k6runner>=0.1.0"]
openai = ["langchain-openai>=0.0.5"]
anthropic = ["langchain-anthropic>=0.1.0"]
ollama = ["langchain-ollama>=0.0.1"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "black>=23.0", "ruff>=0.1.0"]

[project.scripts]
metanoia = "metanoia_qa.cli:main"

[project.urls]
Homepage = "https://github.com/calderonjosue/metanoia-agentic-qa"
Documentation = "https://metanoia-qa.github.io"
Repository = "https://github.com/calderonjosue/metanoia-agentic-qa"
Issues = "https://github.com/calderonjosue/metanoia-agentic-qa/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = [
    "examples/**",
    "skills/*/examples/**",
]
